<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Quizy</string>
    <string name="button">Button</string>
    <string name="question">Enter No Of Questions</string>
    <string name="question_no">Enter Question No</string>
    <string name="hint">Enter Here</string>
    <string name="submit">Submit</string>
    <string name="op1">Option 1</string>
    <string name="op2">Option 2</string>
    <string name="op3">Option 3</string>
    <string name="op4">Option 4</string>
    <string name="next">next</string>
    <string name="ques">Question</string>
    <string name="ans">1</string>
    <string name="answer">Answer option:</string>
    <string name="ans_hint">Ans Option No.</string>
    <string name="join">Enter Id</string>
    <string name="create_joining_id">Create Joining ID</string>
    <string name="name">Enter Your Enrollment-no</string>
    <string name="enrollment">enrollment-no</string>
    <string name="ID">ID</string>
    <string name="share">Share joining ID</string>
    <string name="share_button">Share</string>
    <string name="joining">Your Joining ID is</string>
    <string name="todo">TODO</string>
    <string name="seeScore">See Your Score</string>
    <string name="score">Your Score is</string>
    <string name="myScore">My Score is</string>
    <string name="search">Search</string>
    <string name="mail">abc@xyz.com</string>
    <string name="total_questions">Total Questions :</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="sign">Register</string>
    <string name="logo">logo</string>
    <string name="do_account">Don\'t have a account?</string>
    <string name="have_account">have a account</string>
    <string name="forgot_password">forgot password?</string>
    <string name="reset">Reset</string>
    <string name="conform_password">Confirm password</string>
    <string name="logout">logout</string>
    <string name="welcome_to_quizy">Welcome to Quizy</string>
    <string name="create">Create</string>
    <string name="joinTEXT">Join</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="editQuestion">Edit Question No</string>
    <string name="Enter_Name">Enter your name</string>
    <string name="subject">Enter Subject Name</string>
    <string name="myQuizzes">My Quizzes</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="myProfile">My Profile</string>
    <string name="signOut">Sign Out</string>
    <string name="title_activity_profile">profile</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="Toolbar">toolbar</string>
    <string name="my_question_papers">My Question Papers</string>
    <string name="app_version">Quizy Version: 2.1.0</string>
    <string name="enter_email">Enter Email</string>
    <string name="otp">Enter OTP</string>
    <string name="your_list_is_empty">Your List is Empty</string>
    <string name="delete">delete</string>
    <string name="view">View</string>
    <string name="delete_confirmation" translatable="false">Are you sure?</string>
    <string name="cancel" tools:ignore="MissingTranslation">Cancel</string>
    <string name="Enter_Username">Username</string>
    <string name="eye">eye icon</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addButton">AddButton</string>
    <string name="addQuestion">Add Question</string>
    <string name="view_results">View Results</string>
    <string name="no_submissions">no submissions</string>
    <string name="or">Or</string>
</resources>