<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".editQuestion"
    android:orientation="vertical">
    <TextView
        android:id="@+id/enter_question"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/addQuestion"
        android:textColor="#D523F4"
        android:textSize="20sp"
        android:layout_marginTop="60dp"/>

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/grey"
        app:cardCornerRadius="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <EditText
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:hint="@string/ques"
            android:inputType="text"
            android:background="@color/grey"
            android:textCursorDrawable="@drawable/cursor"
            android:textColor="@color/white"
            android:textColorHint="#607D8B"
            android:importantForAutofill="no" />
    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/c1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@color/grey"
        app:cardCornerRadius="10dp">

        <EditText
            android:id="@+id/op1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:gravity="center"
            android:hint="@string/op1"
            android:textCursorDrawable="@drawable/cursor"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="#607D8B"
            android:importantForAutofill="no" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/c2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@color/grey"
        app:cardCornerRadius="10dp">

        <EditText
            android:id="@+id/op2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:gravity="center"
            android:hint="@string/op2"
            android:textCursorDrawable="@drawable/cursor"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="#607D8B"
            android:autofillHints="" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/c3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@color/grey"

        app:cardCornerRadius="10dp">

        <EditText
            android:id="@+id/op3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:gravity="center"
            android:hint="@string/op3"
            android:inputType="text"
            android:textCursorDrawable="@drawable/cursor"
            android:textColor="@color/white"
            android:textColorHint="#607D8B"
            android:importantForAutofill="no" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/c4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@color/grey"

        app:cardCornerRadius="10dp">

        <EditText
            android:id="@+id/op4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:gravity="center"
            android:hint="@string/op4"
            android:inputType="text"
            android:textCursorDrawable="@drawable/cursor"
            android:textColor="@color/white"
            android:textColorHint="#607D8B"
            android:importantForAutofill="no" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/c5"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@color/grey"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/grey">
        <TextView
            android:id="@+id/ans_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ans_hint"
            android:textSize="11sp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:layout_gravity="center|start"
            android:layout_marginStart="10dp" />

        <EditText
            android:id="@+id/ans"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/grey"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="#607D8B"
            android:textCursorDrawable="@drawable/cursor" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/submit" />

</LinearLayout>