<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070707"
    tools:context=".CreateQuestionPaper"
    android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/enter_question"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/question_no"
                android:textColor="#D523F4"
                android:textSize="20sp"
                android:layout_marginTop="60dp"/>

            <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/grey"
                app:cardCornerRadius="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <EditText
                    android:id="@+id/question"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/grey"
                    android:gravity="center"
                    android:hint="@string/ques"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/hintTextColor"
                    android:textCursorDrawable="@drawable/cursor" />
            </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/c1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="@color/grey"
                app:cardCornerRadius="10dp">

                <EditText
                    android:id="@+id/op1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/grey"
                    android:gravity="center"
                    android:hint="@string/op1"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/hintTextColor"
                    android:textCursorDrawable="@drawable/cursor"
                    tools:ignore="TouchTargetSizeCheck" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/c2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="@color/grey"
                app:cardCornerRadius="10dp">

                <EditText
                    android:id="@+id/op2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints=""
                    android:background="@color/grey"
                    android:gravity="center"
                    android:hint="@string/op2"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="#78909C"
                    android:textCursorDrawable="@drawable/cursor"
                    tools:ignore="TouchTargetSizeCheck" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/c3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="@color/grey"

                app:cardCornerRadius="10dp">

                <EditText
                    android:id="@+id/op3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/grey"
                    android:gravity="center"
                    android:hint="@string/op3"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/hintTextColor"
                    android:textCursorDrawable="@drawable/cursor"
                    tools:ignore="TouchTargetSizeCheck" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/c4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="@color/grey"

                app:cardCornerRadius="10dp">

                <EditText
                    android:id="@+id/op4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/grey"
                    android:gravity="center"
                    android:hint="@string/op4"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="#78909C"
                    android:textCursorDrawable="@drawable/cursor"
                    tools:ignore="TouchTargetSizeCheck" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/c5"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@color/grey"
                android:layout_gravity="center"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/grey">
                <TextView
                    android:id="@+id/ans_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ans_hint"
                    android:textColor="@color/white"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="20dp" />

                <EditText
                    android:id="@+id/ans"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@color/grey"
                    android:gravity="center"
                    android:hint="@string/ans"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:textColorHint="@color/hintTextColor"
                    tools:ignore="TouchTargetSizeCheck" />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/next"
                android:textColor="#D87CE8" />
        </LinearLayout>
    </ScrollView>