<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reset_password"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/pink"
            android:fontFamily="@font/aclonica"
            android:textSize="20sp"
            android:text="@string/enter_email"
            android:layout_gravity="center"/>
        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/grey"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="20dp"
            android:foregroundGravity="center">
            <EditText
                android:id="@+id/mail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textColor="@color/white"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:hint="@string/mail"
                android:textCursorDrawable="@drawable/cursor"
                android:background="@color/grey"
                android:textColorHint="@color/grey3"/>
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>
        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/submit"/>
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>
        <ProgressBar
            android:id="@+id/progress"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.Material3.DynamicColors.Dark"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"/>

    </LinearLayout>

</ScrollView>